objects/A__c.object
<CustomObject>
    <fields>
        <fullName>ABC__c</fullName>
        <label>ABC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C</label>
        <referenceTo>C__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEF__c</fullName>
        <label>DEF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Trip</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hello__c</fullName>
        <label>Hello</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One__c</fullName>
        <label>One</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>srinu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch3</label>
        <referenceTo>Branch3__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>A</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A</pluralLabel>
    <recordTypes>
        <fullName>NewTest</fullName>
        <active>true</active>
        <label>NewTest</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>